--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@
             <div class="footer__4">
                 <h4>Contact Us</h4>
                 <div>
-                    <p>+011 234 567 8910</p>
-                    <p>arnabdutta922@gmail.com</p>
+                    <p>+091 8980858876</p>
+                    <p>dedaniyayash277@gmail.com</p>
                 </div>
 
                 <ul class="footer__socials">
