--- a/courses.html
+++ b/courses.html
@@ -7,8 +7,8 @@
         <link rel="icon" type="image/x-icon" href="./images/icon.png">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     
-        <link rel="stylesheet" href="./css/style.css">
-        <link rel="stylesheet" href="./css/about.css">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="about.css">
 
         <style>
             .courses{
